--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,6 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+# Startup file
+C:\Users\miran\source\repos\ebayBuzApi\ebayBuzApi\Startup.cs
